2008-05-26 [paul]	3.4.0cvs69

	* src/mimeview.c
		plug a leak in mimeview_save_all()

2008-05-24 [colin]	3.4.0cvs68

	* src/common/utils.h
		Fix wrong define on old glibs

2008-05-24 [paul]	3.4.0cvs67

	* src/Makefile.am
	* src/stock_pixmap.c
	* src/stock_pixmap.h
	* src/toolbar.c
	* src/pixmaps/cancel.xpm
	* src/pixmaps/close.xpm
		add a specific icon for A_CANCEL_INC (addresses
		point 1 of bug 1609 'Icon issues')
		replace close.xpm with an icon of the standard
		24x24 size

2008-05-24 [paul]	3.4.0cvs66

	* src/pixmaps/insert_file.xpm
		replaced

2008-05-23 [paul]	3.4.0cvs65

	* src/common/md5.c
	* src/common/md5.h
		add the possibility to check md5 on binary files,
		thanks to Colin

2008-05-23 [colin]	3.4.0cvs64

	* src/mainwindow.c
	* src/summaryview.c
		Fix bug 1610, 'claws crash after opening/closing 
		preferences and window update'

2008-05-22 [colin]	3.4.0cvs63

	* src/prefs_filtering_action.c
	* src/gtk/combobox.c
	* src/gtk/combobox.h
		Fix reselecting of Tags actions in
		filtering actions dialog

2008-05-22 [colin]	3.4.0cvs62

	* src/Makefile.am
	* src/prefs_toolbar.c
	* src/stock_pixmap.c
	* src/stock_pixmap.h
	* src/toolbar.c
	* src/pixmaps/delete_btn.xpm
	* src/pixmaps/insert_file.xpm
	* src/pixmaps/mail_reply_to_list.xpm
		Fix more of bug 1609:
		- Add a Delete button icon
		- Add a Reply to list button icon
		- Fix Insert file button icon
		Artwork by Ciprian Popovici.

2008-05-21 [colin]	3.4.0cvs61

	* src/common/utils.c
		Fix a little leak

2008-05-21 [wwp]	3.4.0cvs60

	* src/prefs_filtering.c
		Don't show SMTP-only accounts in accounts list, as they are
		irrelevant for filtering incoming messages.

2008-05-21 [colin]	3.4.0cvs59

	* src/mainwindow.c
		Don't put SMTP-only accounts in receive menus

2008-05-21 [colin]	3.4.0cvs58

	* src/imap.c
		Fix cvs56 (brain fart)

2008-05-21 [colin]	3.4.0cvs57

	* src/common/utils.c
		Fix bug 1615, 'hang on FIFO when the other end's not 
		opened'

2008-05-21 [colin]	3.4.0cvs56

	* src/imap.c